[package]
name = "tether-agent"
description = "Standardised use of MQTT and MessagePack for inter-pocess communication"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/RandomStudio/tether-agent-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paho-mqtt = "0.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"
rmp-serde = "1.1.1"
log = "0.4.17"
env_logger = "0.7"

